[gd_scene load_steps=4 format=3 uid="uid://c08u4w3k87cef"]

[ext_resource type="Script" path="res://scripts/nightly_summary.gd" id="1_lrmgm"]
[ext_resource type="PackedScene" uid="uid://bp3wnknq2q0ta" path="res://scenes/wellbeing_indicator.tscn" id="1_xekgg"]
[ext_resource type="Texture2D" uid="uid://bq4517b6m0l87" path="res://assets/night_sky.png" id="3_re71p"]

[node name="NightlySummary" type="Node2D"]
script = ExtResource("1_lrmgm")

[node name="StaticVisuals" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="StaticVisuals"]
offset_left = 348.0
offset_top = 94.0
offset_right = 1565.0
offset_bottom = 940.0
color = Color(0.493588, 0.32885, 1, 1)

[node name="ColorRect2" type="ColorRect" parent="StaticVisuals"]
offset_left = 381.0
offset_top = 127.0
offset_right = 1532.0
offset_bottom = 907.0
color = Color(0.286114, 0.00101296, 0.590773, 1)

[node name="TitleLabel" type="Label" parent="StaticVisuals"]
offset_left = 720.0
offset_top = 138.0
offset_right = 1200.0
offset_bottom = 207.0
theme_override_font_sizes/font_size = 50
text = "Sweet dreams zzz...."

[node name="MomLabel" type="Label" parent="StaticVisuals"]
offset_left = 534.0
offset_top = 411.0
offset_right = 671.0
offset_bottom = 434.0
text = "Mom's Wellbeing:"

[node name="SonLabel" type="Label" parent="StaticVisuals"]
offset_left = 1139.0
offset_top = 416.0
offset_right = 1276.0
offset_bottom = 439.0
text = "Son's Wellbeing:"

[node name="DynamicShit" type="Node" parent="."]

[node name="WellbeingIndicator" parent="DynamicShit" instance=ExtResource("1_xekgg")]
position = Vector2(616, 579)

[node name="WellbeingIndicator2" parent="DynamicShit" instance=ExtResource("1_xekgg")]
position = Vector2(1220, 569)
person = "son"

[node name="DayLabel" type="Label" parent="DynamicShit"]
offset_left = 778.0
offset_top = 394.0
offset_right = 1072.0
offset_bottom = 592.0
theme_override_font_sizes/font_size = 90
text = "DAY
1"
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="DynamicShit"]
offset_left = 758.0
offset_top = 704.0
offset_right = 1094.0
offset_bottom = 841.0
theme_override_font_sizes/font_size = 40
text = "Next"

[node name="NightSky" type="Sprite2D" parent="."]
position = Vector2(969, 530)
texture = ExtResource("3_re71p")

[connection signal="pressed" from="DynamicShit/NextButton" to="." method="_on_next_button_pressed"]
